--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Prepare K8S templates
           command: |
-            aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name eks-asdfghj
+            aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name monitoring-rapidinnovation-eks
             rm -rf .k8s/.generated && mkdir -p .k8s/.generated
             for f in .k8s/templates/staging.yml
               do
